added the join section

--- a/index.html
+++ b/index.html
@@ -148,11 +148,18 @@
         </ul>
     </div>
 </section>
+
+<section class="join-section">
+    <h3 class="join-title">Join the colorful Bunch</h3>
+    <div class="join-form">
+        <form>
+            <input class="p-color" type="email" name="" placeholder="Write email" id="">
+            <button class="btn join-btn">Subscribe</button>
+        </form>
+    </div>
+</section>
     </main>
 
-    <footer>
 
-
-    </footer>
 </body>
 </html>
