added little bit footer section

--- a/index.html
+++ b/index.html
@@ -160,6 +160,38 @@
 </section>
     </main>
 
+    <footer>
+ <section class="footer-section">
+    <div class="footer-content">
+        <img src="./assets/logo.png" alt="">
+        <p class="p-color">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+    </div>
+    <div class="footer-title">
+        <div class="title-1">
+            <ul >
+                <li><a class="p-color" href="#">Home</a></li>
+                <li><a class="p-color" href="#">About Us</a></li>
+                <li><a class="p-color" href="#">Blog</a></li>
+                <li><a class="p-color" href="#">FAQ</a></li>
+                <li><a class="p-color" href="#">Contact Us</a></li>
+            </ul>
+        </div>
+        <div class="title-2">
+            <li><a class="p-color" href="#">Features</a></li>
+            <li><a class="p-color" href="#">Pricing</a></li>
+            <li><a class="p-color" href="#">Privacy Policy</a></li>
+            <li><a class="p-color" href="#">Terms of Service</a></li>
+            <li><a class="p-color" href="#">Help Center</a></li>
+        </div>
+        <div class="footer-icon">
+            <img src="./assets/icon-linkedin.png" alt="">
+            <img src="./assets/icon-twitter.png" alt="">
+            <img src="./assets/icon-facebook.png" alt="">
+            <img src="./assets/icon-youtube.png" alt="">
+        </div>
+    </div>
+ </section>
 
+    </footer>
 </body>
 </html>
