added the deals section

--- a/index.html
+++ b/index.html
@@ -149,6 +149,33 @@
     </div>
 </section>
 
+<section class="deals-section">
+    <div class="deals-main">
+        <h3><span class="span-2">Latest</span> Deals</h3>
+        <p class="p-color">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+    </div>
+   <div class="deals-image">
+    <div class="deals-1">
+<div class="image-1">
+<h5>60% Off | Bloom Plant</h5>
+<p><u>Shop Now</u></p>
+ </div>
+<div class="image-2">
+ <h5>30% Off | Ana  Plant</h5>
+ <p><u>Shop Now</u></p>
+</div>
+    </div>
+ <div class="deals-2">
+<div class="image-3">
+<h4>25% Off | Zabo Plant</h4>
+<p><u>Shop Now</u></p>
+</div>
+ </div>
+
+   </div>
+</section>
+
+
 <section class="join-section">
     <h3 class="join-title">Join the colorful Bunch</h3>
     <div class="join-form">
@@ -161,37 +188,32 @@
     </main>
 
     <footer>
- <section class="footer-section">
-    <div class="footer-content">
-        <img src="./assets/logo.png" alt="">
+<section class="footer-container">
+    <div class="footer-main">
+        <img src="./assets/logo@2x.png" alt="">
         <p class="p-color">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
     </div>
-    <div class="footer-title">
-        <div class="title-1">
-            <ul >
-                <li><a class="p-color" href="#">Home</a></li>
-                <li><a class="p-color" href="#">About Us</a></li>
-                <li><a class="p-color" href="#">Blog</a></li>
-                <li><a class="p-color" href="#">FAQ</a></li>
-                <li><a class="p-color" href="#">Contact Us</a></li>
-            </ul>
-        </div>
-        <div class="title-2">
-            <li><a class="p-color" href="#">Features</a></li>
-            <li><a class="p-color" href="#">Pricing</a></li>
-            <li><a class="p-color" href="#">Privacy Policy</a></li>
-            <li><a class="p-color" href="#">Terms of Service</a></li>
-            <li><a class="p-color" href="#">Help Center</a></li>
-        </div>
-        <div class="footer-icon">
-            <img src="./assets/icon-linkedin.png" alt="">
-            <img src="./assets/icon-twitter.png" alt="">
-            <img src="./assets/icon-facebook.png" alt="">
-            <img src="./assets/icon-youtube.png" alt="">
-        </div>
+    <div class="title-1">
+        <li><a class="p-color" href="#">Home</a></li>
+        <li><a class="p-color" href="#">About Us</a></li>
+        <li><a class="p-color" href="#">Blog</a></li>
+        <li><a class="p-color" href="#">FAQ</a></li>
+        <li><a class="p-color" href="#">Contact Us</a></li>
     </div>
- </section>
-
+    <div class="title-2">
+        <li><a class="p-color" href="#">Features</a></li>
+        <li><a class="p-color" href="#">Pricing</a></li>
+        <li><a class="p-color" href="#">Privacy Policy</a></li>
+        <li><a class="p-color" href="#">Terms of Service</a></li>
+        <li><a class="p-color" href="#">Help Center</a></li>
+    </div>
+    <div class="footer-img">
+        <img src="./assets/icon-linkedin.png" alt="">
+        <img src="./assets/icon-twitter.png" alt="">
+        <img src="./assets/icon-facebook.png" alt="">
+        <img src="./assets/icon-youtube.png" alt="">
+    </div>
+</section>
     </footer>
 </body>
 </html>
