added a final touch

--- a/index.html
+++ b/index.html
@@ -194,18 +194,18 @@
         <p class="p-color">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
     </div>
     <div class="title-1">
-        <li><a class="p-color" href="#">Home</a></li>
-        <li><a class="p-color" href="#">About Us</a></li>
-        <li><a class="p-color" href="#">Blog</a></li>
-        <li><a class="p-color" href="#">FAQ</a></li>
-        <li><a class="p-color" href="#">Contact Us</a></li>
+        <li class="li-footer"><a class="p-color" href="#">Home</a></li>
+        <li class="li-footer"><a class="p-color" href="#">About Us</a></li>
+        <li class="li-footer"><a class="p-color" href="#">Blog</a></li>
+        <li class="li-footer"><a class="p-color" href="#">FAQ</a></li>
+        <li class="li-footer"><a class="p-color" href="#">Contact Us</a></li>
     </div>
     <div class="title-2">
-        <li><a class="p-color" href="#">Features</a></li>
-        <li><a class="p-color" href="#">Pricing</a></li>
-        <li><a class="p-color" href="#">Privacy Policy</a></li>
-        <li><a class="p-color" href="#">Terms of Service</a></li>
-        <li><a class="p-color" href="#">Help Center</a></li>
+        <li class="li-footer"><a class="p-color" href="#">Features</a></li>
+        <li class="li-footer"><a class="p-color" href="#">Pricing</a></li>
+        <li class="li-footer"><a class="p-color" href="#">Privacy Policy</a></li>
+        <li class="li-footer"><a class="p-color" href="#">Terms of Service</a></li>
+        <li class="li-footer"><a class="p-color" href="#">Help Center</a></li>
     </div>
     <div class="footer-img">
         <img src="./assets/icon-linkedin.png" alt="">
